Bug 103128 - [softpipe] piglit fs-ldexp regression
Summary: [softpipe] piglit fs-ldexp regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: 17.3
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks: mesa-17.3
  Show dependency treegraph
 
Reported: 2017-10-06 18:23 UTC by Vinson Lee
Modified: 2017-11-16 05:48 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2017-10-06 18:23:38 UTC
mesa: bbe2082e7d38568433a5944a3f3fc7af4f079564 (master 17.3.0-devel)

$ ./bin/shader_runner tests/spec/mesa_shader_integer_functions/execution/built-in-functions/fs-ldexp.shader_test -auto
Probe color at (0,0)
  Expected: 0 255 0 255
  Observed: 255 255 0 255
Test failure on line 38
Probe color at (0,0)
  Expected: 0 255 0 255
  Observed: 255 255 0 255
Test failure on line 52
Probe color at (0,0)
  Expected: 0 255 0 255
  Observed: 255 255 0 255
Test failure on line 59
Probe color at (0,0)
  Expected: 0 255 0 255
  Observed: 255 255 0 255
Test failure on line 66
Probe color at (0,0)
  Expected: 0 255 0 255
  Observed: 255 255 0 255
Test failure on line 73
PIGLIT: {"result": "fail" }


6de5147d2024a282f064d3bcf6103240d283da72 is the first bad commit
commit 6de5147d2024a282f064d3bcf6103240d283da72
Author: Nicolai Hähnle <nicolai.haehnle@amd.com>
Date:   Fri Sep 15 16:52:23 2017 +0200

    st/glsl_to_tgsi: use LDEXP when available
    
    Reviewed-by: Marek Olšák <marek.olsak@amd.com>
    Tested-by: Dieter Nützel <Dieter@nuetzel-hh.de>

:040000 040000 bc78e5e07de9bab1751cfb3a24b78e5aa24af441 669a548343b85d800902f005853c05871a525d19 M	src
bisect run success
Comment 1 Nicolai Hähnle 2017-11-15 13:43:23 UTC
I can reproduce this, will take a look now.
Comment 2 Nicolai Hähnle 2017-11-15 18:37:59 UTC
https://patchwork.freedesktop.org/patch/188544/ fixes this for me.
Comment 3 Nicolai Hähnle 2017-11-16 05:48:22 UTC
commit f3fa3b0d95c712c00318ca5601433bce1b82432d


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.